Use Path.of(".") instead of System.getProperty("user.dir") for cache directory
Co-authored-by: nixel2007 <1132840+nixel2007@users.noreply.github.com>